<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ultimate Hangman</string>
	<string name="play_button">Play!</string>
	<string name="scores_button">Best scores</string>
	<string name="info">Ultimate Hangman is a revisitation of the classic hangman game. With its stunning user interface and new frenetic playing modes, Ultimate Hangman it\'s the besy way to enjoy the challenge of guessing words.</string>
	
	<string name="classic">Classic</string>
	<string name="two_players">Two players</string>
	<string name="arcade">Arcade</string>
	<string name="survival">Survival</string>
	    
    <string name="two_players_prompt_title">Ultimate Hangman</string>
	<string name="two_players_prompt_message">Choose the word to guess</string>
	<string name="two_players_prompt_positive">Ok</string>
	<string name="two_players_prompt_negative">Cancel</string>
	<string name="two_players_prompt_error">The word can only contain letters, and can be 10 characters at most.</string>
	
	<string name="score">Score:</string>
	<string name="time">Time:</string>
	    
	<string name="victory">You won!</string>
	<string name="restart_game">Play again</string>
	<string name="back_to_mode_selection">Menu</string>
	
	<string name="the_word_was">The word was:</string>
	<string name="game_over">Game over</string>
	<string name="score_text">You made %d points</string>
	<string name="best_score">Best score!</string>
	<string name="reset_scores">Reset scores</string>
	
	<string name="admob_unit_id">a14fab92c6a66b3</string>
</resources>