<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="30dp" >
    
    <!--  Logo  -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo"
        />
    

	<!--  Text View -->
    <TextView
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/the_word_was"
        android:textSize="25sp" />
    
    <!--  Word -->
    <TextView
        android:id="@+id/word"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/the_word_was"
        android:textSize="30sp" />
    
    <!-- Restart game -->
    <Button
        android:id="@+id/restart"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/word"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"        
    	android:background="@drawable/sketch_button_background"
    	android:gravity="center"
    	android:paddingLeft="10dp"
    	android:paddingRight="10dp"
    	android:paddingTop="10dp"
    	android:paddingBottom="15dp"
    	android:text="@string/restart_game"
    	android:textColor="@drawable/sketch_button_textcolor"
    	android:textSize="20sp"
        />
    
    <!-- Back to mode selection -->
    <Button
        android:id="@+id/back_to_mode_selection_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/restart"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"        
    	android:background="@drawable/sketch_button_background"
    	android:gravity="center"
    	android:paddingLeft="10dp"
    	android:paddingRight="10dp"
    	android:paddingTop="10dp"
    	android:paddingBottom="15dp"
    	android:text="@string/back_to_mode_selection"
    	android:textColor="@drawable/sketch_button_textcolor"
    	android:textSize="20sp"
        />
    
    
            
</RelativeLayout>