<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="30dp" >

	<!-- Back button -->
    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dp"
        android:background="@drawable/backtomenu_button_background" />

	<!--  Logo  -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo"
        />
    

	<!-- arcade label -->

    <TextView
        android:id="@+id/arcade_score_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="@string/arcade"
        android:textSize="25sp" />
    
    <!-- arcade score -->

    <TextView
        android:id="@+id/arcade_score"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/arcade_score_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:textSize="35sp" />
    
    <!-- survival label -->

    <TextView
        android:id="@+id/survival_score_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/arcade_score"
        android:layout_centerHorizontal="true"
		android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="@string/survival"
        android:textSize="25sp" />
    
    <!-- survival score -->

    <TextView
        android:id="@+id/survival_score"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/survival_score_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:textSize="35sp" />
    
	<Button
        android:id="@+id/reset_scores"
        android:layout_height="wrap_content"
        android:layout_width="140dp"
        android:layout_below="@id/survival_score"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerHorizontal="true"        
    	android:background="@drawable/sketch_button_background"
    	android:gravity="center"
    	android:text="@string/reset_scores"
    	android:textColor="@drawable/sketch_button_textcolor"
    	android:textSize="18sp"
        />
	    
</RelativeLayout>